lab/metallb-config.yaml
# Create namespace
apiVersion: v1
kind: Namespace
metadata:
  name: metallb-system
  labels:
    app: metallb
# Create configmap
apiVersion: v1
kind: ConfigMap
metadata:
  namespace: metallb-system
  name: config
data:
  config: |
    address-pools:
    - name: default
      protocol: layer2
      addresses:
      - 10.42.69.20-10.42.69.29
