lab/ingress-tls-fix.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-nginx-default
  namespace: ingress-nginx
  annotations:
    kubernetes.io/ingress.class: nginx
    # nginx.ingress.kubernetes.io/ssl-redirect: true
    # nginx.ingress.kubernetes.io/force-ssl-redirect: true
    cert-manager.io/issuer: lab.hq.solidrust.net
spec:
  rules:
  - host: lab.hq.solidrust.net
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: ingress-nginx-controller
            port:
              number: 80
  tls:
  - hosts:
    - lab.hq.solidrust.net
    secretName: lab.hq.solidrust.net-tls
